# SDL-net-chess

./: .gitignore  CMakeLists.txt  README-ru.md  README.md  create-data-file.bat  create-data-file.sh
docs/: INSTALL-Debian.sh  INSTALL-Fedora.sh  INSTALL-Windows.md  INSTALL-ru.md  INSTALL.md
internet/: baseInternet.cpp  internetClient.cpp  internetCycle.cpp  internetServer.cpp  internetServer.hpp
src/: animations.cpp  animations.hpp  animationsNames.cpp  animationsNames.hpp  application.cpp  application.hpp  archieveLoader.cpp  cycleTemplate.cpp  cycleTemplate.hpp  cyclesNames.cpp  cyclesNames.hpp  data.hpp  dataLoader.cpp  dataLoader.hpp  dataTypes.hpp  define.hpp  entity.cpp  entity.hpp  fileLoader.cpp  font.cpp  font.hpp  fontsNames.cpp  fontsNames.hpp  gameClient.cpp  gameClient.hpp  gameServer.cpp  gameServer.hpp  gameSingle.cpp  gameSingle.hpp  graphics.cpp  graphics.hpp  icone.cpp  icone.hpp  include.hpp  init.cpp  init.hpp  initFile.cpp  initFile.hpp  internetCodes.hpp  languages.hpp  (+25 more)
src/GUI/: animation.cpp  bar.cpp  baseGUI.cpp  baseGUI.hpp  dynamicText.cpp  highlightedStaticText.cpp  imageButton.cpp  infoBox.cpp  interface.hpp  oneOptionBox.cpp  rectBackplate.cpp  roundedBackplate.cpp  scrollBox.cpp  slider.cpp  staticText.cpp  template.cpp  textButton.cpp  textureTemplate.cpp  twoOptionBox.cpp  typeBox.cpp  typeField.cpp
src/audio/: audio.cpp  audio.hpp  musics.cpp  musics.hpp  sounds.cpp  sounds.hpp
src/cycles/: baseCycle.cpp  baseCycle.hpp  client.cpp  client.hpp  clientGame.cpp  clientGame.hpp  clientLobby.cpp  clientLobby.hpp  coopGame.cpp  coopGame.hpp  cycles.hpp  gameCycle.cpp  gameCycle.hpp  internetCycle.cpp  internetCycle.hpp  pauseCycle.cpp  pauseCycle.hpp  selectCycle.cpp  selectCycle.hpp  server.cpp  server.hpp  serverGame.cpp  serverGame.hpp  serverLobby.cpp  serverLobby.hpp  singlePlayer.cpp  singlePlayer.hpp  singleplayerGame.cpp  singleplayerGame.hpp  twoPlayer.cpp  twoPlayer.hpp
src/data/: animations.cpp  animations.hpp  app.cpp  app.hpp  application.cpp  application.hpp  archieveLoader.cpp  array.hpp  colors.hpp  cycleTemplate.cpp  cycleTemplate.hpp  data.hpp  dataLoader.hpp  exceptions.hpp  fileLoader.cpp  font.cpp  font.hpp  fonts.cpp  fonts.hpp  graphics.cpp  graphics.hpp  icone.cpp  icone.hpp  idleTimer.cpp  idleTimer.hpp  init.cpp  initFile.cpp  initFile.hpp  languages.cpp  languages.hpp  libraries.cpp  libraries.hpp  loadExceptions.hpp  logger.cpp  logger.hpp  macroses.hpp  main.cpp  mouse.cpp  mouse.hpp  music.cpp  (+11 more)
src/data/audio/: audio.cpp  audio.hpp  cyclic.cpp  cyclic.hpp  musics.cpp  musics.hpp  sounds.cpp  sounds.hpp
src/game/: background.cpp  background.hpp  base.cpp  base.hpp  baseInternet.hpp  board.cpp  board.hpp  client.cpp  client.hpp  connectionLostBox.cpp  connectionLostBox.hpp  field.cpp  field.hpp  fieldSave.cpp  fieldSave.hpp  figures.hpp  figuresMoves.cpp  figuresMoves.hpp  gameBoard.cpp  gameBoard.hpp  letters.cpp  letters.hpp  messageBox.cpp  messageBox.hpp  position.cpp  position.hpp  server.cpp  server.hpp  settingsMenu.cpp  settingsMenu.hpp  singlePlayer.cpp  singlePlayer.hpp  terminatedBox.cpp  terminatedBox.hpp  twoPlayer.cpp  twoPlayer.hpp
src/internet/: client.cpp  client.hpp  codes.hpp  connection.cpp  connection.hpp  data.cpp  data.hpp  destination.cpp  destination.hpp  gameConnection.cpp  gameConnection.hpp  indexesArray.cpp  indexesArray.hpp  internet.cpp  internet.hpp  library.cpp  library.hpp  message.cpp  message.hpp  reciepent.cpp  reciepient.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp
src/menu/: serverData.cpp  serverData.hpp  serverInfo.cpp  serverInfo.hpp  settingsMenu.cpp  settingsMenu.hpp  targetConnect.cpp  targetConnect.hpp
wait integration/cycles/: baseCycle.cpp  baseCycle.hpp  client.cpp  client.hpp  gameCycle.hpp  selectCycle.cpp  selectCycle.hpp  server.cpp  server.hpp  singlePlayer.cpp  singlePlayer.hpp  twoPlayer.cpp
wait integration/game/: background.cpp  background.hpp  board.cpp  board.hpp  figures.hpp  figuresMoves.cpp  figuresMoves.hpp  letters.cpp  letters.hpp  settingsMenu.cpp  settingsMenu.hpp
wait integration/internet/: baseInternet.hpp  internetClient.hpp  internetCycle.hpp  internetServer.cpp  message.cpp  message.hpp
(+71 files in other folders)
